# base-python-data-science

./: .gitattributes  .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENSE  README.md  custom_spelling.txt  index.html  index.xml  requirements.txt  sitemap.xml
src/data-scratch-cpp-library/: CMakeLists.txt  NaiveBayesClassifier.cpp  NaiveBayesClassifier.h  Table.h  accuracy.cpp  accuracy.h  clustering.cpp  clustering.h  data-scratch-cpp-library.h  databases.cpp  decision_trees.h  dscpp.h  gradient_descent.h  hypothesis_and_inference.cpp  hypothesis_and_inference.h  introduction.h  kmeans.h  linear_algebra.cpp  linear_algebra.h  logistic_regression.cpp  logistic_regression.h  machine_learning.cpp  machine_learning.h  makefile  manipulation.cpp  manipulation.h  mapreduce.cpp  multiple_regression.h  mysqrt.cpp  mysqrt.h  naive_bayes.cpp  nearest_neighbors.cpp  nearest_neighbors.h  network_analysis.cpp  network_analysis.h  neural_networks.h  probability.cpp  probability.h  recommender_systems.h  simple_linear_regression.h  (+7 more)
src/data-scratch-cpp-library/dscpp/: c01_introduction.cpp  introduction.h
src/data-scratch-cpp-library/dscpp/c01_intro/: c01_introduction.cpp  introduction.h  mysqrt.cpp  mysqrt.h  strength.cpp  strength.h
src/data-scratch-cpp-library/dscpp/c02_crash_course/: e02_whitespace.cpp
src/data-scratch-cpp-library/dscpp/c05_statistics/: e01_stats.cpp  stats.cpp
src/data-scratch-cpp-library/dscpp/c06_probability/: probability.h
src/data-scratch-cpp-library/dscpp/c07_hypothesis_and_inference/: e01_hypothesis_and_inference.cpp
src/data-scratch-cpp-library/dscpp/c08_gradient_descent/: e01_sgd.cpp  gradient_descent.cpp
src/data-scratch-cpp-library/dscpp/c09_getting_data/: egrep.py.cpp
src/data-scratch-cpp-library/dscpp/c10_working_with_data/: e01_working_with_data.py.cpp  working_with_data.h
src/data-scratch-cpp-library/dscpp/c13_naive_bayes/: NaiveBayesClassifier.h  e01_naive_bayes.py.cpp  naive_bayes.h  naive_bayes.py.cpp
src/data-scratch-cpp-library/dscpp/c14_simple_linear_regression/: simple_linear_regression.cpp
src/data-scratch-cpp-library/dscpp/c15_multiple_regression/: e01_multiple_regression.py.cpp  multiple_regression.cpp  multiple_regression.py.cpp
src/data-scratch-cpp-library/dscpp/c16_logistic_regression/: logistic_regression.py.cpp
src/data-scratch-cpp-library/dscpp/c17_decision_trees/: decision_trees.cpp  decision_trees.py.cpp  e01_decision_trees.py.cpp
src/data-scratch-cpp-library/dscpp/c18_neural_networks/: e01_neural_networks.py.cpp  neural_networks.cpp  neural_networks.h
src/data-scratch-cpp-library/dscpp/c20_clustering/: kmeans.cpp
src/data-scratch-cpp-library/dscpp/c22_network_analysis/: e01_network_analysis.py.cpp  network_analysis.py.cpp
src/data-scratch-cpp-library/dscpp/c23_recommender_systems/: e01_recommender_systems.py.cpp  recommender_systems.cpp  recommender_systems.h
src/data-scratch-cpp-library/dscpp/c24_databases/: Table.cpp
src/data-scratch-cpp-library/dscpp/c25_mapreduce/: mapreduce.h  mapreduce.py.cpp
src/data-scratch-cpp-library/tests/test-dscpp/: test-c05-stats.cpp  test-c06-probability.cpp
src/data-scratch-library/: Dockerfile  Dockerfile-base  Dockerfile-builder  build-requirements.txt  makefile  pyproject.toml  requirements.txt  setup-maximal.py  setup.py
src/data-scratch-library/dsl/: __init__.py  circular_buffer.py  clustering.py  databases.py  decision_trees.py  gradient_descent.py  hypothesis_and_inference.py  introduction.py  logistic_regression.py  machine_learning.py  manipulation.py  mapreduce.py  multiple_regression.py  nearest_neighbors.py  network_analysis.py  neural_networks.py  probability.py  recommender_systems.py  simple_linear_regression.py  stats.py  working_with_data.py
src/data-scratch-library/dsl/c01_intro/: __init__.py  c01_user.py  c02_friendship.py  c03_interest.py  c04_salary_from_tenure.py  c05_network.py  e01_introduction.py  introduction.py
src/data-scratch-library/dsl/c02_crash_course/: e0201_whitespace.py  e0202_modules.py  e0203_functions.py  e0204_strings.py  e0205_exceptions.py  e0206_lists.py  e0207_tuples.py  e0208_dictionary.py  e0209_counters.py  e0210_sets.py  e0211_control_flow.py  e0212_truth.py  e0213_sort.py  e0214_lists.py  e0215_assert.py  e0216_oop.py  e0217_random.py  e0218_regex.py  e0219_functional.py  e0220_annotations.py  e02_whitespace.py
src/data-scratch-library/dsl/c04_linear_algebra/: __init__.py  e0401_vectors.py  e0402_matrices.py  linear_algebra.py
src/data-scratch-library/dsl/c05_statistics/: c01_userdata.py  e01_stats.py  e0501_central_tendancy.py  e0502_dispersion.py  e0503_correlation.py  stats.py
src/data-scratch-library/dsl/c06_probability/: e01_probability.py  e0601_conditional.py  e0602_uniform.py  e0603_normal.py  e0604_binom.py  probability.py
src/data-scratch-library/dsl/c07_hypothesis_and_inference/: e01_hypothesis_and_inference.py  e0701_coin_flip.py  e0702_normal_bounds.py  e0703_pvalues.py  e0704_p_hacking.py  e0705_a_b.py  e0706_bayesian_inference.py  hypothesis_and_inference.py
src/data-scratch-library/dsl/c08_gradient_descent/: __init__.py  decorators.py  e01_sgd.py  e0801_estimating_gradient.py  e0802_using_gradient.py  e0803_fitting_models.py  e0804_minibatch_gd.py  e0805_stochastic_gd.py  gradient_descent.py
src/data-scratch-library/dsl/c09_getting_data/: e0901_stdin_stdout_egrep.py  e0903_most_common_words.py  e0904_reading_files.py  e0905_delimited_files.py  egrep.py  random_matrix.py
src/data-scratch-library/dsl/c10_working_with_data/: circular_buffer.py  e01_working_with_data.py  e1000_circular_buffer.py  e1001_univariate.py  e1002_bivariate.py  e1003_multivariate.py  e1004_named_tuples.py  e1005_dataclass.py  e1006_cleaning.py  e1007_manipulation.py  e1008_rescaling.py  manipulation.py  (+1 more)
src/data-scratch-library/test/: test_gradient_descent.py  test_linear_algebra.py  test_machine_learning.py
src/data-scratch-library/tests/: test_c01_intro.py  test_c05_statistics.py  test_c11_machine_learning.py  test_data_science_from_scratch.py  test_gradient_descent.py  test_probability.py
(+686 files in other folders)
