cmake_minimum_required(VERSION 3.14)
project(data-scratch-cpp-library LANGUAGES CXX)
set(VERSION_MAJOR 1)
set(VERSION_MINOR 0)

set(CMAKE_CXX_STANDARD 11) # GoogleTest requires at least C++11
set(CMAKE_CXX_FLAGS="-g -O0 -Wall -W -Wshadow -Wunused-variable -Wunused-parameter -Wunused-function -Wunused -Wno-system-headers -Wno-deprecated -Woverloaded-virtual -Wwrite-strings -fprofile-arcs -ftest-coverage")
set(CMAKE_C_FLAGS="-g -O0 -Wall -W -fprofile-arcs -ftest-coverage")
set(CMAKE_SHARED_LINKER_FLAGS="-fprofile-arcs -ftest-coverage")
set(CMAKE_EXE_LINKER_FLAGS="-fprofile-arcs -ftest-coverage")

# build a shared library

include_directories(dscpp)
FILE(GLOB c01_introSources dscpp/c01_intro/*)
FILE(GLOB c02_crash_courseSources dscpp/c02_crash_course/*)
FILE(GLOB c03_visualizing_dataSources dscpp/c03_visualizing_data/*)
FILE(GLOB c04_linear_algebraSources dscpp/c04_linear_algebra/*)
FILE(GLOB c05_statisticsSources dscpp/c05_statistics/*)
FILE(GLOB c06_probabilitySources dscpp/c06_probability/*)
FILE(GLOB c07_hypothesis_and_inferenceSources dscpp/c07_hypothesis_and_inference/*)
FILE(GLOB c08_gradient_descentSources dscpp/c08_gradient_descent/*)
FILE(GLOB c09_getting_dataSources dscpp/c09_getting_data/*)
FILE(GLOB c10_working_with_dataSources dscpp/c10_working_with_data/*)
FILE(GLOB c11_machine_learningSources dscpp/c11_machine_learning/*)
FILE(GLOB c12_k_nearest_neighborsSources dscpp/c12_k_nearest_neighbors/*)
FILE(GLOB c13_naive_bayesSources dscpp/c13_naive_bayes/*)
FILE(GLOB c14_simple_linear_regressionSources dscpp/c14_simple_linear_regression/*)
FILE(GLOB c15_multiple_regressionSources dscpp/c15_multiple_regression/*)
FILE(GLOB c16_logistic_regressionSources dscpp/c16_logistic_regression/*)
FILE(GLOB c17_decision_treesSources dscpp/c17_decision_trees/*)
FILE(GLOB c18_neural_networksSources dscpp/c18_neural_networks/*)
FILE(GLOB c19_deep_learningSources dscpp/c19_deep_learning/*)
FILE(GLOB c20_clusteringSources dscpp/c20_clustering/*)
FILE(GLOB c21_natural_language_processingSources dscpp/c21_natural_language_processing/*)
FILE(GLOB c22_network_analysisSources dscpp/c22_network_analysis/*)
FILE(GLOB c23_recommender_systemsSources dscpp/c23_recommender_systems/*)
FILE(GLOB c24_databasesSources dscpp/c24_databases/*)
FILE(GLOB c25_mapreduceSources dscpp/c25_mapreduce/*)
FILE(GLOB c26_data_ethicsSources dscpp/c26_data_ethics/*)
FILE(GLOB c27_go_forthSources dscpp/c27_go_forth/*)

add_library(data-scratch-cpp-library SHARED ${c01_introSources})

link_directories(${CMAKE_CURRENT_BINARY_DIR})
